--- a/src/interfaz/Calendario.form
+++ b/src/interfaz/Calendario.form
@@ -34,7 +34,7 @@
                               <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" attributes="0">
-                                      <Component id="agregarEventoBoton" min="-2" max="-2" attributes="0"/>
+                                      <Component id="agregarActividadBoton" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="eventoText" min="-2" pref="237" max="-2" attributes="0"/>
                                   </Group>
@@ -50,8 +50,8 @@
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="refresh" min="-2" pref="115" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+                      <Component id="refresh" min="-2" pref="129" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                       <Component id="calendario" min="-2" pref="400" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -102,7 +102,7 @@
               <EmptySpace pref="63" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="eventoText" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="agregarEventoBoton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="agregarActividadBoton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
@@ -135,18 +135,21 @@
     </Component>
     <Component class="javax.swing.JTextField" name="eventoText">
     </Component>
-    <Component class="javax.swing.JButton" name="agregarEventoBoton">
+    <Component class="javax.swing.JButton" name="agregarActividadBoton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Agregar Evento"/>
+        <Property name="text" type="java.lang.String" value="Agregar Actividad"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="agregarEventoBotonActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="agregarActividadBotonActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="borrarEventoBoton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Borrar Eventos"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="borrarEventoBotonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="eventosDiaBoton">
       <Properties>
@@ -158,7 +161,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="refresh">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Eventos mes"/>
+        <Property name="text" type="java.lang.String" value="Eventos del mes"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="refreshActionPerformed"/>
@@ -185,7 +188,7 @@
     <Component class="javax.swing.JLabel" name="eventLabel1">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Calibri" size="11" style="0"/>
+          <Font name="Calibri" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="jLabel1"/>
       </Properties>
@@ -193,7 +196,7 @@
     <Component class="javax.swing.JLabel" name="eventLabel2">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Calibri" size="11" style="0"/>
+          <Font name="Calibri" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="jLabel2"/>
       </Properties>
@@ -201,7 +204,7 @@
     <Component class="javax.swing.JLabel" name="eventLabel3">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Calibri" size="11" style="0"/>
+          <Font name="Calibri" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="jLabel3"/>
       </Properties>
@@ -209,7 +212,7 @@
     <Component class="javax.swing.JLabel" name="eventLabel4">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Calibri" size="11" style="0"/>
+          <Font name="Calibri" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="jLabel4"/>
       </Properties>
@@ -217,7 +220,7 @@
     <Component class="javax.swing.JLabel" name="eventLabel5">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Calibri" size="11" style="0"/>
+          <Font name="Calibri" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="jLabel5"/>
       </Properties>
@@ -225,7 +228,7 @@
     <Component class="javax.swing.JLabel" name="eventLabel6">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Calibri" size="11" style="0"/>
+          <Font name="Calibri" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="jLabel6"/>
       </Properties>
@@ -233,7 +236,7 @@
     <Component class="javax.swing.JLabel" name="eventLabel7">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Calibri" size="11" style="0"/>
+          <Font name="Calibri" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="jLabel7"/>
       </Properties>
